--- a/Cloud Computing Final Project/Jenkinsfile
+++ b/Cloud Computing Final Project/Jenkinsfile
@@ -11,10 +11,10 @@ pipeline {
         stage('Deploy to S3') {
             steps {
                 withAWS(region: 'us-east-2', credentials: 'aws-jenkins-creds') {
-                    sh '''
+                    bat """
                         aws s3 cp index.html s3://cloud-computing-project-demo/index.html --cache-control "no-cache"
                         aws s3 sync Resources s3://cloud-computing-project-demo/Resources --delete --cache-control "max-age=86400"
-                    '''
+                    """
                 }
             }
         }
@@ -22,11 +22,11 @@ pipeline {
         stage('Invalidate CloudFront Cache') {
             steps {
                 withAWS(region: 'us-east-2', credentials: 'aws-jenkins-creds') {
-                    sh '''
-                        aws cloudfront create-invalidation \
-                        --distribution-id YOUR_DISTRIBUTION_ID \
+                    bat """
+                        aws cloudfront create-invalidation ^
+                        --distribution-id YOUR_DISTRIBUTION_ID ^
                         --paths "/*"
-                    '''
+                    """
                 }
             }
         }
