--- a/Cloud Computing Final Project/Jenkinsfile
+++ b/Cloud Computing Final Project/Jenkinsfile
@@ -2,11 +2,11 @@ pipeline {
     agent any
 
     environment {
-        AWS_ACCESS_KEY_ID = credentials('aws-access-key-id')      // Jenkins credential ID
-        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')  // Jenkins credential ID
+        AWS_ACCESS_KEY_ID = credentials('AKIAQI7VGS5MSMF5PDOZ')      // Jenkins credential ID
+        AWS_SECRET_ACCESS_KEY = credentials('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')  // Jenkins credential ID
         AWS_DEFAULT_REGION = 'us-east-2'
         BUCKET_NAME = 'cloud-final-joel'
-        CLOUDFRONT_DIST_ID = 'E3ABCXYZ123'  // Replace with your actual ID
+        CLOUDFRONT_DIST_ID = 'E293OVOVYITHO5'  // actual ID
     }
 
     stages {
