--- a/Cloud Computing Final Project/Jenkinsfile
+++ b/Cloud Computing Final Project/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
 
     environment {
-    AWS_ACCESS_KEY_ID = credentials('aws-access-key-id')
-    AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')
-    AWS_DEFAULT_REGION = 'us-east-2'
-    BUCKET_NAME = 'cloud-final-joel'
-    CLOUDFRONT_DIST_ID = 'E293OVOVYITHO5'
-}
+        AWS_ACCESS_KEY_ID = credentials('aws-access-key-id')
+        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')
+        AWS_DEFAULT_REGION = 'us-east-2'
+        BUCKET_NAME = 'cloud-final-joel'
+        CLOUDFRONT_DIST_ID = 'E293OVOVYITHO5'
+    }
 
     stages {
 
@@ -21,29 +21,27 @@ pipeline {
 
         stage('Deploy HTML/CSS/JS to S3') {
             steps {
-                sh '''
-                aws s3 cp index.html s3://$BUCKET_NAME/index.html --acl public-read
-                aws s3 cp style.css s3://$BUCKET_NAME/style.css --acl public-read
-                aws s3 cp script.js s3://$BUCKET_NAME/script.js --acl public-read
-                '''
+                bat """
+                aws s3 cp index.html s3://%BUCKET_NAME%/index.html --acl public-read
+                aws s3 cp style.css s3://%BUCKET_NAME%/style.css --acl public-read
+                aws s3 cp script.js s3://%BUCKET_NAME%/script.js --acl public-read
+                """
             }
         }
 
         stage('Sync Resources Folder') {
             steps {
-                sh '''
-                aws s3 sync Resources/ s3://$BUCKET_NAME/Resources/ --acl public-read
-                '''
+                bat """
+                aws s3 sync Resources s3://%BUCKET_NAME%/Resources --acl public-read
+                """
             }
         }
 
         stage('Invalidate CloudFront Cache') {
             steps {
-                sh '''
-                aws cloudfront create-invalidation \
-                  --distribution-id $CLOUDFRONT_DIST_ID \
-                  --paths "/*"
-                '''
+                bat """
+                aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DIST_ID% --paths "/*"
+                """
             }
         }
     }
