--- a/Cloud Computing Final Project/Jenkinsfile
+++ b/Cloud Computing Final Project/Jenkinsfile
@@ -22,9 +22,9 @@ pipeline {
         stage('Deploy HTML/CSS/JS to S3') {
             steps {
                 bat """
-                aws s3 cp index.html s3://%BUCKET_NAME%/index.html
-                aws s3 cp indexStyle.css s3://%BUCKET_NAME%/indexStyle.css
-                aws s3 cp script.js s3://%BUCKET_NAME%/script.js
+                aws s3 cp "Cloud Computing Final Project/index.html" s3://%BUCKET_NAME%/index.html
+                aws s3 cp "Cloud Computing Final Project/indexStyle.css" s3://%BUCKET_NAME%/indexStyle.css
+                aws s3 cp "Cloud Computing Final Project/script.js" s3://%BUCKET_NAME%/script.js
                 """
             }
         }
@@ -32,7 +32,7 @@ pipeline {
         stage('Sync Resources Folder') {
             steps {
                 bat """
-                aws s3 sync Resources s3://%BUCKET_NAME%/Resources
+                aws s3 sync "Cloud Computing Final Project/Resources" s3://%BUCKET_NAME%/Resources
                 """
             }
         }
